--- a/charts/example/Chart.yaml
+++ b/charts/example/Chart.yaml
@@ -6,6 +6,6 @@ type: application
 dependencies:
   - name: common
     repository: oci://registry-1.docker.io/bitnamicharts
-    version: ^2.25.0
+    version: 2.27.0
     tags:
       - bitnami-common
